# technical-doc-parser

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  task_proposal.yml
.github/workflows/: ci.yml  code-style.yml  platform.yml
cmake/: ONNXRuntime.cmake  PDFium.cmake
config/: backends.json
cpp/app/: CMakeLists.txt  cli_options.h  main.cpp
cpp/assembly/: CMakeLists.txt  document_assembler.cpp  document_assembler.h
cpp/backend/: CMakeLists.txt  document_backend_factory.cpp  document_backend_factory.h
cpp/backend/pdf/: CMakeLists.txt  pdf_document.cpp  pdf_document_backend.cpp  pdf_document_backend.h  render_service.cpp  render_service.h  text_service.cpp  text_service.h
cpp/backend/pdf/pdfium/: CMakeLists.txt  pdf_document.cpp  pdf_document.h  pdf_library.cpp  pdf_page_renderer.cpp  pdf_reader.cpp  pdf_text_extractor.cpp  pdf_text_extractor.h  pdfium_document_backend.cpp  pdfium_document_backend.h  pdfium_runtime.cpp  render_service.cpp  render_service.h  text_service.cpp  text_service.h
cpp/common/: CMakeLists.txt  result.h  status.h
cpp/document/: CMakeLists.txt  document_block.h  layout_model.h  page_artifact.h  parsed_document.h  reading_order_model.h  table_model.h  text_model.h  text_normalizer.cpp  (+1 more)
cpp/document_source/: CMakeLists.txt  document_source_factory.cpp  document_source_factory.h  document_source_interfaces.h
cpp/document_source/pdf/: CMakeLists.txt  pdf_document.cpp  pdf_document.h  pdf_document_backend.cpp  pdf_document_backend.h  render_service.cpp  render_service.h  text_service.cpp  text_service.h
cpp/document_source/pdf/pdfium/: pdf_library.cpp  pdf_page_renderer.cpp  pdf_reader.cpp  pdf_reader.h  pdf_text_extractor.cpp  pdf_text_extractor.h  pdfium_runtime.cpp  pdfium_scoped_handles.h
cpp/export/: CMakeLists.txt  document_exporter.cpp  document_exporter.h  json_document_exporter.cpp  json_document_exporter.h  json_manifest_writer.cpp  json_manifest_writer.h  structured_text_document_exporter.cpp  structured_text_document_exporter.h
cpp/image/: CMakeLists.txt  image_preprocessor.cpp  image_preprocessor.h
cpp/layout/: CMakeLists.txt  doclaynet_onnx_backend.cpp  layout_backend.h  layout_postprocessing.cpp  layout_postprocessing.h  layout_service.cpp  layout_service.h  paddle_doclayout_onnx_backend.cpp  text_layout_model_backend.cpp
cpp/ocr/: CMakeLists.txt  noop_ocr_backend.cpp  ocr_backend.h  ocr_service.cpp  ocr_service.h  paddle_ocr_onnx_backend.cpp  paddle_ocr_onnx_backend.h  tesseract_cli_ocr_backend.cpp  tesseract_cli_ocr_backend.h
cpp/pdf/: CMakeLists.txt  pdf_document.cpp  pdf_document.h  pdf_library.cpp  pdf_library.h  pdf_page_renderer.cpp  pdf_page_renderer.h  pdf_reader.cpp  pdf_reader.h  pdf_text_extractor.cpp  pdf_text_extractor.h  pdfium_runtime.cpp  pdfium_runtime.h  pdfium_scoped_handles.h  render_service.cpp  render_service.h  text_service.cpp  text_service.h
cpp/pipeline/: CMakeLists.txt  backend_registry.cpp  backend_registry.h  document_backend_factory.cpp  document_backend_factory.h  document_pipeline.cpp  document_pipeline.h  layout_analysis_stage.cpp  layout_analysis_stage.h  pdfium_document_backend.cpp  pdfium_document_backend.h  pipeline_context.cpp  pipeline_context.h  pipeline_service_factory.cpp  pipeline_service_factory.h  pipeline_trace.cpp  pipeline_trace.h  reading_order_stage.cpp  reading_order_stage.h  stage_interfaces.h  stage_observer.h  table_recognition_stage.cpp  table_recognition_stage.h  text_extraction_stage.cpp  text_extraction_stage.h  text_quality.cpp  text_quality.h
cpp/reading_order/: CMakeLists.txt  docling_like_reading_order_backend.cpp  reading_order_backend.h  reading_order_service.cpp  reading_order_service.h
cpp/table/: CMakeLists.txt  table_backend.h  table_service.cpp  table_service.h  table_transformer_onnx_backend.cpp  text_table_structure_backend.cpp
docs/: commit-convention.md  dependencies.md  evaluation.md  roadmap.md  text-model.md
platform/: README.md
platform/api/: pyproject.toml
platform/api/app/: __init__.py  database.py  main.py  models.py  settings.py
platform/api/tests/: test_models.py  test_protocol_examples.py
platform/worker/: CMakeLists.txt  main.cpp  redis_client.cpp  redis_client.h  worker_stage_observer.cpp  worker_stage_observer.h
scripts/: download_funsd.sh  download_quality_baseline.sh  prepare_annotated_baseline.py  prepare_quality_baseline.py  setup_doclaynet_layout.sh  setup_onnxruntime.sh  setup_paddle_layout.sh  setup_paddleocr_baseline.sh  setup_pdfium.sh  setup_table_transformer.sh  setup_ubuntu_dependencies.sh
tests/: CMakeLists.txt  check_pdfium_setup_script.sh  cli_render_smoke.sh  doclaynet_layout_eval.cpp  funsd_ocr_eval.cpp  image_preprocessor_smoke.cpp  paddle_ocr_onnx_baseline.cpp  pdf_library_smoke.cpp  pdf_reader_smoke.cpp  pdf_render_smoke.cpp  pdf_text_extractor_smoke.cpp  pubtables_table_eval.cpp  run_doclaynet_layout_benchmark.sh  run_pubtables_table_benchmark.sh  text_model_smoke.cpp  text_normalizer_smoke.cpp
tests/benchmark/: README.md  annotated_sources.json  benchmark_common.py  evaluate_layout.py  evaluate_ocr.py  evaluate_table.py  sources.json  test_evaluators.py  validate_corpus.py
tests/benchmark/corpus/: manifest.json
tests/benchmark/corpus/layout_doclaynet/: ground_truth.json  subset.coco.json
tests/benchmark/corpus/licenses/: README.md
tests/benchmark/corpus/ocr_tesseract/: ground_truth.json
tests/benchmark/corpus/table_pubtables/: ground_truth.json
tests/fixtures/pdfs/: README.md
tests/unit/: CMakeLists.txt  backend_registry_test.cpp  document_assembler_test.cpp  json_document_exporter_test.cpp  json_manifest_writer_test.cpp  layout_backend_test.cpp  layout_service_test.cpp  reading_order_backend_test.cpp  reading_order_service_test.cpp  structured_text_document_exporter_test.cpp  table_backend_test.cpp  table_recognition_stage_test.cpp  table_service_test.cpp  text_extraction_stage_test.cpp  text_normalizer_test.cpp
(+18 files in other folders)
